--- a/css.css
+++ b/css.css
@@ -4,8 +4,8 @@
 }
 
 :root {
-    --sectionheight: 98vh;
-    --sectionwidth: 98vw;
+    --sectionheight: 100vh;
+    --sectionwidth: 100vw;
     /* --sectionmargintop: 1vh; */
 }
 
@@ -13,42 +13,185 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    /* height: calc(10 * (var(--sectionheight) + 10vh)); */
-    /* height: 3000px; */
 }
 
 section {
     display: flex;
-    flex-direction: column;
-    align-self: center;
     flex-basis: var(--sectionheight);
-    margin-top: calc((100vh - var(--sectionheight)) * 0.5);
-    width: var(--sectionwidth);
-    background-color: royalblue;
 }
 
 section.welcome {
-    display: flex;
-    justify-content: start;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     background-image: url(img/Widok5.jpg);
     background-position: center center;
     background-size: cover;
 }
 
 section.welcome h1 {
-    margin-top: 300px;
-    font-size: 100px;
+    margin-top: 100px;
+    font-size: 40px;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: whitesmoke;
-    /* text-shadow: 10px 10px 10px #314102r; */
-    /* text-shadow: 10px 10px 10px red; */
+    color: white;
+    /* border: yellow solid 2px; */
 }
 
 section.welcome h2 {
-    margin-top: 0px;
-    font-size: 50px;
+    margin-top: 45px;
+    font-size: 25px;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: whitesmoke;
+    color: white;
+    /* border: yellow solid 2px; */
 }
+
+/* button start---------------------------------------------------- */
+button.arrow {
+    position: absolute;
+    bottom: 00px;
+    left: 50%;
+    width: 30px;
+    height: 70px;
+    transform: translate(-50%, 0%);
+    font-size: 30px;
+    border: 0;
+    border-radius: 10px;
+    background-color: rgba(0, 255, 0, 0);
+    /* border: yellow solid 5px; */
+    opacity: 1;
+    color: white;
+    overflow: hidden;
+}
+
+button.arrow i {
+    text-shadow: 0 15px white, 0 -15px white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: down 2s linear infinite both;
+
+}
+
+@keyframes down {
+    0% {
+        top: 60%;
+    }
+
+    10% {
+        top: 50%;
+    }
+
+    20% {
+        top: 60%;
+    }
+
+    30% {
+        top: 50%;
+    }
+
+    40% {
+        top: 60%;
+    }
+
+    100% {
+        top: 60%;
+    }
+}
+
+
+button:hover {
+    cursor: pointer;
+}
+
+button:hover i {
+    animation-play-state: paused;
+}
+
+/* button end------------------------------------------------ */
+
+section.discover {
+    flex-direction: row;
+    background-color: yellow;
+}
+
+section.discover div p {
+    width: 30vw;
+}
+
+section.discover img {
+    width: 30vw;
+}
+
+/* media */
+
+@media(min-width: 360px) and (min-height: 640px) {
+    section.welcome h1 {
+        margin-top: 140px;
+    }
+
+    section.welcome h2 {
+        margin-top: 30px;
+        font-size: 30px;
+    }
+
+}
+
+@media(min-width: 360px) and (min-height: 800px) {
+    section.welcome h1 {
+        margin-top: 220px;
+    }
+
+}
+
+@media(min-width: 400px) and (min-height: 640px) {
+    section.welcome h1 {
+        margin-top: 230px;
+    }
+}
+
+@media(min-width: 400px) and(min-height: 800px) {
+    section.welcome h1 {
+        margin-top: 270px;
+    }
+}
+
+@media(min-width: 450px) {
+    section.welcome h1 {
+        margin-top: 160px;
+    }
+}
+
+@media(min-width: 600px) {
+    section.welcome h1 {
+        margin-top: 360px;
+        font-size: 50px;
+    }
+}
+
+@media(min-width: 800px) {
+    section.welcome h1 {
+        margin-top: 450px;
+        font-size: 70px;
+    }
+
+    section.welcome h2 {
+        margin-top: 40px;
+        font-size: 40px;
+    }
+}
+
+@media(min-width: 1024px) {
+    section.welcome h1 {
+        margin-top: 320px;
+        font-size: 70px;
+    }
+
+    section.welcome h2 {
+        margin-top: 30px;
+        font-size: 40px;
+    }
+}
+
+/* media */
