--- a/css.css
+++ b/css.css
@@ -19,7 +19,7 @@ body {
 section {
     display: flex;
     flex-direction: column;
-    flex-basis: var(--sectionheight);
+    flex-basis: 100vh;
     max-width: 1920px;
 }
 
@@ -30,6 +30,69 @@ section.welcome {
     background-size: cover;
 }
 
+/* MENU */
+.burger i {
+    display: none;
+}
+
+.burger i.on {
+    display: block;
+    position: fixed;
+    padding: 5px;
+    z-index: 11;
+    color: white;
+    font-size: 40px;
+    top: 15px;
+    left: 15px;
+    cursor: pointer;
+    background-color: rgba(10, 10, 10, 0.3)
+}
+
+.burger i.fa-arrow-left {
+    color: black;
+    background-color: rgba(0, 0, 0, 0)
+}
+
+.menu {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    left: -100vw;
+    z-index: 10;
+    height: 100%;
+    width: 100vw;
+    background-color: white;
+    transition: .2s linear;
+}
+
+.menu.on {
+    left: 0vw;
+}
+
+.menu ul {
+    margin-top: 30vh;
+    background-color: white;
+}
+
+.menu ul li a {
+    width: 100vw;
+    text-decoration: none;
+}
+
+.menu ul li a:visited {
+    color: black;
+}
+
+.menu ul li a p {
+    font-family: Cinzel, serif;
+    padding: 0;
+    text-transform: uppercase;
+    font-size: 30px;
+
+}
+
+/* MENU END */
 section.welcome h1 {
     margin-top: 100px;
     font-size: 40px;
@@ -110,7 +173,7 @@ section.season div.picture {
 /* button start---------------------------------------------------- */
 button.arrow {
     position: absolute;
-    bottom: 0px;
+    bottom: 50px;
     left: 50%;
     width: 30px;
     height: 70px;
@@ -208,6 +271,8 @@ iframe {
         font-size: 30px;
     }
 
+
+
 }
 
 @media(min-width: 360px) and (min-height: 800px) {
@@ -281,7 +346,17 @@ iframe {
 
     section.welcome {
         flex-direction: column;
-        flex-basis: var(--sectionheight);
+        height: 100vh;
+    }
+
+    .burger i.on {
+        top: 25px;
+        left: 25px;
+    }
+
+    .menu {
+        left: -300px;
+        width: 300px;
     }
 
     section {
